--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "author": "Shane Keney",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "dotenv": "^16.0.1",
     "jest": "^28.1.1",
     "jest-module-name-mapper": "^0.1.5",
+    "module-alias": "^2.2.2",
     "nodemon": "^2.0.18",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
@@ -23,6 +29,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "helmet": "^5.1.0"
   }
 }
