--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "dotenv": "^16.0.1",
     "jest": "^28.1.1",
     "jest-module-name-mapper": "^0.1.5",
-    "module-alias": "^2.2.2",
     "nodemon": "^2.0.18",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
@@ -43,6 +42,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "helmet": "^5.1.0"
+    "helmet": "^5.1.0",
+    "module-alias": "^2.2.2"
   }
 }
