--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "dotenv": "^16.0.1",
     "jest": "^28.1.1",
     "jest-module-name-mapper": "^0.1.5",
     "nodemon": "^2.0.18",
@@ -43,6 +42,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "dotenv": "^16.0.1"
   }
 }
