--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/module-alias": "^2.0.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
-    "module-alias": "^2.2.2",
-    "dotenv": "^16.0.1"
+    "module-alias": "^2.2.2"
   }
 }
